@@ -1,3 +1,9 @@
+2007-2-9	fabian
+
+	* Fixed a bug that causes dead session be left open sometimes (#1653347).
+	* Adjust the full screen mode behavior, so you are less likely to be stuck.
+	* Added selectedTextColor into Applescript.
+	
 2007-2-1	fabian
 
 	* Added a default keyboard profile: xterm(OS X).
